--- a/ui/menuitemwidget.ui
+++ b/ui/menuitemwidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>CustomWidget</class>
- <widget class="QWidget" name="CustomWidget">
+ <class>MenuItemWidget</class>
+ <widget class="QWidget" name="MenuItemWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
