color in theme item

--- a/ui/themewidget.ui
+++ b/ui/themewidget.ui
@@ -13,13 +13,22 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item alignment="Qt::AlignHCenter">
     <widget class="QLabel" name="name">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
       <string>Theme's name</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <widget class="QListWidget" name="colorsList"/>
    </item>
   </layout>
  </widget>
