--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -30,9 +30,6 @@
           <property name="text">
            <string>Collapse</string>
           </property>
-          <property name="shortcut">
-           <string>Ctrl+M</string>
-          </property>
          </widget>
         </item>
         <item>
@@ -93,6 +90,8 @@
     <addaction name="actionCreate_new_theme"/>
     <addaction name="actionImport_new_theme"/>
     <addaction name="actionImport_from_link"/>
+    <addaction name="actionCollapse_Expand_menu"/>
+    <addaction name="actionCreate_new_color"/>
    </widget>
    <widget class="QMenu" name="menuFile">
     <property name="title">
@@ -151,7 +150,7 @@
     <string>Create new theme</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+N</string>
+    <string>Ctrl+Shift+N</string>
    </property>
   </action>
   <action name="actionImport_new_theme">
@@ -162,6 +161,22 @@
   <action name="actionImport_from_link">
    <property name="text">
     <string>Import from link</string>
+   </property>
+  </action>
+  <action name="actionCollapse_Expand_menu">
+   <property name="text">
+    <string>Collapse/Expand menu</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+M</string>
+   </property>
+  </action>
+  <action name="actionCreate_new_color">
+   <property name="text">
+    <string>Create new color</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
  </widget>
