--- a/ui/themewidget.ui
+++ b/ui/themewidget.ui
@@ -28,7 +28,23 @@
     </widget>
    </item>
    <item>
-    <widget class="QListWidget" name="colorsList"/>
+    <widget class="QListWidget" name="colorsList">
+     <property name="flow">
+      <enum>QListView::LeftToRight</enum>
+     </property>
+     <property name="resizeMode">
+      <enum>QListView::Adjust</enum>
+     </property>
+     <property name="gridSize">
+      <size>
+       <width>220</width>
+       <height>220</height>
+      </size>
+     </property>
+     <property name="viewMode">
+      <enum>QListView::IconMode</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
