--- a/ui/menuitemwidget.ui
+++ b/ui/menuitemwidget.ui
@@ -56,6 +56,9 @@
    </item>
    <item>
     <widget class="QToolButton" name="toolButton">
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
      <property name="text">
       <string>x</string>
      </property>
