--- a/ui/themeitemwidget.ui
+++ b/ui/themeitemwidget.ui
@@ -38,7 +38,7 @@
    <item>
     <layout class="QHBoxLayout" name="idLayout">
      <item>
-      <widget class="QTextEdit" name="colorID">
+      <widget class="QTextEdit" name="colorName">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
          <horstretch>0</horstretch>
