--- a/ui/colorwidget.ui
+++ b/ui/colorwidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ThemeItemWidget</class>
- <widget class="QWidget" name="ThemeItemWidget">
+ <class>ColorWidget</class>
+ <widget class="QWidget" name="ColorWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
