--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -110,6 +110,7 @@
     </property>
     <addaction name="actionSave_all"/>
     <addaction name="actionCreate_new_theme"/>
+    <addaction name="actionImport_theme"/>
     <addaction name="actionCollapse_Expand_menu"/>
    </widget>
    <addaction name="menuThemes"/>
@@ -145,6 +146,8 @@
    <addaction name="actionSave"/>
    <addaction name="separator"/>
    <addaction name="actionCreate_new_theme"/>
+   <addaction name="actionImport_theme"/>
+   <addaction name="separator"/>
    <addaction name="actionCreate_new_color"/>
    <addaction name="separator"/>
    <addaction name="actionCollapse_Expand_menu"/>
@@ -210,6 +213,18 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="actionImport_theme">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/res/resource/icons/feather/upload.svg</normaloff>:/res/resource/icons/feather/upload.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Import theme</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+I</string>
    </property>
   </action>
  </widget>
