--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -137,6 +137,7 @@
     <addaction name="actionSave_all"/>
     <addaction name="actionCreate_new_theme"/>
     <addaction name="actionImport_theme"/>
+    <addaction name="actionRead_theme_from_file"/>
    </widget>
    <addaction name="menuThemes"/>
    <addaction name="menuTheme"/>
@@ -172,6 +173,7 @@
    <addaction name="separator"/>
    <addaction name="actionCreate_new_theme"/>
    <addaction name="actionImport_theme"/>
+   <addaction name="actionRead_theme_from_file"/>
    <addaction name="separator"/>
    <addaction name="actionCreate_new_color"/>
    <addaction name="actionApply_theme"/>
@@ -263,6 +265,15 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionRead_theme_from_file">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/res/resource/icons/feather/file.svg</normaloff>:/res/resource/icons/feather/file.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Read theme from file</string>
    </property>
   </action>
  </widget>
